--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <header>
       <%= render "shared/navbar" %>
     </header>
+    <p class="notice"> <%= notice %> </p>
     <%= yield %>
   </body>
 </html>
