--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,11 @@
+html {
+  font-size: 62.5%;
+}
+
+.nav-font-sizes {
+  font-size: 2rem;
+}
+
 .recipe {
   text-decoration: none;
   color: white;
@@ -6,4 +14,13 @@
 .recipe:active,
 .recipe:hover {
   color: white;
+}
+
+.recipe-details-cont {
+  font-size: 2rem;
+}
+
+.recipe-details {
+  margin-top: 10rem;
+  font-weight: bold;
 }
