--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,2 +1,33 @@
-<h1>Recipes#show</h1>
-<p>Find me in app/views/recipes/show.html.erb</p>
+<div class="recipe-details-cont container">
+  <h1 class="pt-4 text-center"><%= @recipe.name %> </h1>
+  <ul class="recipe-details list-unstyled">
+    <li>
+      Preparation time: <%= pluralize(@recipe.preparation_time, 'hour') %>
+    </li>
+    <li>
+      Cooking time: <%= pluralize(@recipe.cooking_time, 'hour') %>
+    </li>
+    <li> Steps go here...</li>
+  </ul>
+
+  <div class="d-flex justify-content-between mt-5">
+    <button>Generate shopping list</button>
+    <button>Add ingredient</button>
+  </div>
+  <hr>
+  <table class="table table-striped table-bordered mt-5">
+  <thead>
+    <tr>
+      <th scope="col">Food</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Value</th>
+      <th scope="col">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @recipe_foods.each do |food| %>
+      <%= render "shared/recipe_foods", food: food %>
+    <% end %>
+  </tbody>
+</table>
+</div>
