--- a/app/views/shared/_recipe_foods.html.erb
+++ b/app/views/shared/_recipe_foods.html.erb
@@ -1,13 +1,38 @@
 <tr>
   <td><%= food.name %></td>
-  <td><%= "#{food.recipe_foods.where(recipe_id: @recipe.id).first.quantity} #{food.measurement_unit}" %></td>
-  <td><%= "$ #{food.price * food.recipe_foods.where(recipe_id: @recipe.id).first.quantity }" %></td>
+  <td><%= "#{food.recipe_foods.find_by(recipe_id: @recipe.id).quantity} #{food.measurement_unit}" %></td>
+  <td><%= "$ #{food.price * food.recipe_foods.find_by(recipe_id: @recipe.id).quantity }" %></td>
   <td class="d-flex justify-content-around">
-    <button class="btn btn-info">Modify</button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modifyIngredient<%= food.id %>">
+      Modify
+    </button>
     <%= button_to "Remove",
-      recipe_food_path(food.recipe_foods.where(recipe_id: @recipe.id).first.id),
+      destroy_recipe_food_path(food.recipe_foods.find_by(recipe_id: @recipe.id).id),
       method: :delete,
       class: "btn btn-danger"
     %>
   </td>
 </tr>
+
+<!-- Modal for modifying an ingredient -->
+
+<div class="modal fade" id="modifyIngredient<%= food.id %>" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="staticBackdropLabel">Modifying <%= food.name %></h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body d-flex flex-column gap-3">
+        <%= form_with url: recipe_food_path(food.recipe_foods.find_by(recipe_id: @recipe.id).id), method: :patch  do |f| %>
+          <%= f.label :quantity %>
+          <%= f.number_field :quantity, value: food.recipe_foods.find_by(recipe_id: @recipe.id).quantity %>
+          <%= f.submit "Update", class: "btn btn-warning" %>
+        <% end %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
