--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -22,7 +22,7 @@
     </div>
     <br />
     <div class="field">
-      <%= f.check_box :public_recipe, {}, true, false %>
+      <%= f.check_box :public_recipe %>
       <%= f.label :public? %>
     </div>
     <br />
