--- a/app/views/shared/_recipe_foods.html.erb
+++ b/app/views/shared/_recipe_foods.html.erb
@@ -24,10 +24,10 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body d-flex flex-column gap-3">
-        <%= form_with url: recipe_food_path(food.recipe_foods.find_by(recipe_id: @recipe.id).id), method: :patch  do |f| %>
+        <%= form_with url: "/recipe_foods/#{food.recipe_foods.find_by(recipe_id: @recipe.id).id}", method: :patch  do |f| %>
           <%= f.label :quantity %>
           <%= f.number_field :quantity, value: food.recipe_foods.find_by(recipe_id: @recipe.id).quantity %>
-          <%= f.submit "Update", class: "btn btn-warning" %>
+          <button type="submit" class="btn btn-warning" data-controller="refresh">Update</button>
         <% end %>
       </div>
       <div class="modal-footer">
