--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
               <%= link_to "Recipes", recipes_path %>
             </li>
             <li>
+              <%= link_to 'Shopping List', general_shopping_list_path %>
+            </li>
+            <li>
               <%= button_to "Sign out", destroy_user_session_path, class: "text-danger", method: :delete %>
             </li>
           </ul>
