Add link to shopping list in recipes#show

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -22,7 +22,7 @@
   </ul>
 
   <div class="d-flex justify-content-between mt-5">
-    <button class="btn btn-primary">Generate shopping list</button>
+    <%= link_to 'Generate Shopping List', general_shopping_list_path, class: 'btn btn-primary' %>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addIngredients">
       Add ingredient
     </button>
