Add public_recipes page view and logic

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
               <%= link_to "Recipes", recipes_path %>
             </li>
             <li>
+              <%= link_to 'Public Recipes', public_recipes_path %>
+            </li>
+            <li>
               <%= button_to "Sign out", destroy_user_session_path, class: "text-danger", method: :delete %>
             </li>
           </ul>
