--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,13 +6,16 @@
           <%= link_to "Home", root_path, class: "btn btn-light nav-font-sizes" %>
         </li>
       </ul>
-      <div class="d-flex flex-row">
+      <div class="d-flex flex-row gap-3">
       <% if user_signed_in? %>
+       <%= link_to "Add Food", new_food_path, class: "btn btn-dark nav-font-sizes" %>
         <%= link_to "New Recipe", new_recipe_path, class: "btn btn-dark nav-font-sizes" %>
         <div class="nav-item dropdown">
           <span class="nav-link dropdown-toggle text-dark nav-font-sizes" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</span>
           <ul class="dropdown-menu  dropdown-menu-end nav-font-sizes" aria-labelledby="navbarScrollingDropdown">
-            <li>Foods</li>
+            <li>
+              <%= link_to 'Foods', foods_path %>
+            </li>
             <li>
               <%= link_to "Recipes", recipes_path %>
             </li>
