Add authorization for food

--- a/app/views/shared/_food.html.erb
+++ b/app/views/shared/_food.html.erb
@@ -2,5 +2,7 @@
   <td><%= food.name %></td>
   <td><%= food.measurement_unit %></td>
   <td>$ <%= food.price %></td>
-  <td><%= button_to 'Delete', food_path(food.id), class: "btn btn-danger px-3", method: :delete %></td>
+  <% if  can? :destroy, food %>
+    <td><%= button_to 'Delete', food_path(food.id), class: "btn btn-danger px-3", method: :delete %></td>
+  <% end %>
 </tr>
