--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
               <%= link_to 'Foods', foods_path %>
             </li>
             <li>
-              <%= link_to "Recipes", recipes_path %>
+              <%= link_to "My Recipes", recipes_path %>
             </li>
             <li>
               <%= link_to 'Public Recipes', public_recipes_path %>
