--- a/app/views/shared/_recipe.html.erb
+++ b/app/views/shared/_recipe.html.erb
@@ -3,7 +3,10 @@
     <h3 class="col-3"> <%= recipe.name %> </h3>
     <p class="col-9">  <%= recipe.description %>  </p>
   <% end %>
-  <%= button_to "Remove", "/recipes/#{recipe.id}", class: "btn btn-danger px-3", method: :delete %>
+  
+  <% if can? :destroy, recipe %>
+    <%= button_to "Remove", "/recipes/#{recipe.id}", class: "btn btn-danger px-3", method: :delete %>
+  <% end %>
 </li>
 
 
