Specify input format for preparation and cooking time of recipes

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -7,13 +7,13 @@
     </div>
     <br />
     <div class="field">
-      <%= f.label :preparation_time %><br />
-      <%= f.text_field :preparation_time %>
+      <%= f.label "Preparation time(hours)" %><br />
+      <%= f.text_field :preparation_time,  placeholder: "e.g 0.5, 1.0" %>
     </div>
     <br />
     <div class="field">
-      <%= f.label :cooking_time %><br />
-      <%= f.text_field :cooking_time %>
+      <%= f.label "Cooking time(hours)" %><br />
+      <%= f.text_field :cooking_time, placeholder: "e.g 0.5, 1.0" %>
     </div>
     <br />
     <div class="field">
